Bottom gradient issue on safari

--- a/css/diary-view.css
+++ b/css/diary-view.css
@@ -165,9 +165,9 @@ background: #30343b;
     z-index: 100;
     height: 51px;
     pointer-events: none;
-    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(252,250,243,1) 98%, rgba(255,253,245,1) 99%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(252,250,243,1) 98%,rgba(255,253,245,1) 99%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(252,250,243,1) 98%,rgba(255,253,245,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: -moz-linear-gradient(top,  rgba(252,250,243,0) 0%, rgba(252,250,243,1) 98%, rgba(255,253,245,1) 99%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(252,250,243,0) 0%,rgba(252,250,243,1) 98%,rgba(255,253,245,1) 99%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(252,250,243,0) 0%,rgba(252,250,243,1) 98%,rgba(255,253,245,1) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#fffdf5',GradientType=0 ); /* IE6-9 */
 }
 .logged-in .diary-page-cite {
